switch to coinbase

--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,3 @@
-KRAKEN_API_KEY='Kraken api key here'
-KRAKEN_PRIVATE_KEY='Kraken private key here'
+COINBASE_API_KEY='Coinbase api key here'
+COINBASE_SECRET_KEY='Coinbase secret key here'
+COINBASE_PASSPHRASE='Coinbase passphrase here'
