--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,29 @@
 autopep8==1.5.7
+cbpro==1.1.4
 certifi==2021.5.30
 chardet==4.0.0
+coinbase==2.1.0
 cycler==0.10.0
 greenlet==1.1.0
 idna==2.10
 kiwisolver==1.3.1
-matplotlib==3.4.2
-mplfinance==0.12.7a17
-numpy==1.20.3
+matplotlib==3.3.4
+mock==4.0.3
+numpy==1.19.5
+pandas==1.1.5
 pep8==1.7.1
 Pillow==8.2.0
 pycodestyle==2.7.0
+pycryptodome==3.10.1
+pymongo==3.5.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 pytz==2021.1
-requests==2.25.1
-six==1.16.0
-SQLAlchemy==1.4.18
+requests==2.13.0
+schedule==1.1.0
+six==1.10.0
+sortedcontainers==2.4.0
 toml==0.10.2
 urllib3==1.26.5
+websocket-client==0.40.0
