--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,12 @@
-COINBASE_API_KEY='Coinbase api key here'
-COINBASE_SECRET_KEY='Coinbase secret key here'
-COINBASE_PASSPHRASE='Coinbase passphrase here'
+COINBASE_API_KEY=
+COINBASE_BASE_64_SECRET=
+COINBASE_PASSPHRASE=
+COINBASE_URL=
+
+USDC_COINBASE_ACCOUNT=
+ETH_COINBASE_ACCOUNT=
+
+SANDBOX_COINBASE_API_KEY=
+SANDBOX_COINBASE_BASE_64_SECRET=
+SANDBOX_COINBASE_PASSPHRASE=
+SANDBOX_COINBASE_URL=
