--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,61 @@
+aiohttp==3.8.0
+aiosignal==1.2.0
+async-timeout==4.0.0
+attrs==21.2.0
+autobahn==21.2.1
+Automat==20.2.0
 autopep8==1.5.7
-cbpro==1.1.4
+binance==0.3
+binance-connector==1.6.0
 certifi==2021.5.30
+cffi==1.15.0
 chardet==4.0.0
-coinbase==2.1.0
+charset-normalizer==2.0.7
+constantly==15.1.0
+cryptography==35.0.0
 cycler==0.10.0
+dateparser==1.1.0
+frozenlist==1.2.0
 greenlet==1.1.0
+hyperlink==21.0.0
 idna==2.10
+incremental==21.3.0
 kiwisolver==1.3.1
 matplotlib==3.3.4
 mock==4.0.3
+multidict==5.2.0
 numpy==1.19.5
 pandas==1.1.5
 pep8==1.7.1
 Pillow==8.2.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.7.0
+pycparser==2.20
 pycryptodome==3.10.1
 pymongo==3.5.1
+pyOpenSSL==19.0.0
 pyparsing==2.4.7
+python-binance==1.0.15
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 pytz==2021.1
-requests==2.13.0
+pytz-deprecation-shim==0.1.0.post0
+regex==2021.11.2
+requests==2.25.1
 schedule==1.1.0
+service-identity==21.1.0
 six==1.10.0
 sortedcontainers==2.4.0
 toml==0.10.2
+Twisted==21.2.0
+txaio==21.2.1
+typing-extensions==3.10.0.2
+tzdata==2021.5
+tzlocal==4.1
+ujson==4.2.0
 urllib3==1.26.5
 websocket-client==0.40.0
+websockets==9.1
+yarl==1.7.2
+zope.interface==5.4.0
